[Chore] Migrate module libcommon-util-kotlin to libcommon-util